changes theme color to blue

--- a/public/assets/scss/layout/_shop.scss
+++ b/public/assets/scss/layout/_shop.scss
@@ -737,7 +737,7 @@
         position: absolute;
         width: 305px;
         height: 305px;
-        background: #45F882;
+        background: #0d6efd;
         filter: blur(150px);
         z-index: -1;
         left: 50%;
@@ -800,7 +800,7 @@
         position: absolute;
         width: 305px;
         height: 305px;
-        background: #45F882;
+        background: #0d6efd;
         filter: blur(150px);
         z-index: -1;
         right: 0;
