--- a/public/assets/scss/utils/_colors.scss
+++ b/public/assets/scss/utils/_colors.scss
@@ -1,7 +1,7 @@
 $colors: (
     common: (
         color-blue: #0d6efd,
-        color-indigo: #6610f2,
+        color-indigo: #0d6efd,
         color-purple: #6f42c1,
         color-pink: #d63384,
         color-red: #dc3545,
@@ -30,7 +30,7 @@ $colors: (
         color: #fff,
     ),
     theme: (
-        primary: #45f882,
+        primary: #0d6efd,
         secondary: #ffbe18,
     ),
     border: (
